--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="estilos/style.css">
     <link rel="stylesheet" href="estilos/media-query.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <title>Login</title>
 </head>
 <body>
@@ -17,7 +18,21 @@
                 <h1>Login</h1>
                 <p>Seja vem-vindo(a) novamente. Faça Login para acessar sua conta e poder fazer
                     as configurações no seu ambiente.</p>
-                    <form action="login.php" method="post"></form>
+                    <form action="login.php" method="post" autocomplete="on">
+                        <div class="campo"> 
+                            <span class="material-icons">person</span>                           
+                            <input type="email" name="login" id="ilogin" placeholder="Seu Email" autocomplete="email" required maxlength="30">
+                            <label for="ilogin">Login</label>
+                        </div>
+                        <div class="campo">  
+                            <span class="material-icons">vpn_key</span>                          
+                            <input type="password" name="senha" id="isenha" placeholder="Sua Senha" autocomplete="current-password" required maxlength="20" minlength="8">
+                            <label for="isenha">Senha</label>
+                        </div>
+                        <input type="submit" value="Entrar">
+                        <a href="esqueci.html">Esqueci a Senha <span class="material-icons">mail</span></a>
+
+                    </form>
             </div>
         </section>
     </main>
